--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="menu_item_favorites">Favoris</string>
     <string name="menu_item_chat">Chat</string>
     <string name="menu_item_history">Historique</string>
-    <string name="manga_activity">Favoris</string>
+    <string name="manga_activity">One Piece</string>
+    <string name="favortites_activity">Favoris</string>
 </resources>
