--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
+    <string name="scan">Scan %1$s</string>
 
     <string name="menu_item_home" id="home">Accueil</string>
     <string name="menu_item_favorites">Favoris</string>
