--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,11 @@
     <string name="menu_item_about">À propos</string>
     <string name="menu_item_accueil">Accueil</string>
 
-    <string name="validate_button">Valider</string>
-    <string name="pseudo_pref">Changer votre pseudo</string>
-    <string name="titlePseudonyme">Pseudonyme</string>
-    <string name="messagePseudonyme">Entrez votre pseudonyme</string>
     <string name="validate">Valider</string>
     <string name="cancel">Annuler</string>
 
     <string name="msg">%1$s\n%2$s</string>
+    <string name="chat">Chat</string>
+    <string name="username">Pseudonyme</string>
 
 </resources>
