--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,16 @@
     <string name="validate">Valider</string>
     <string name="cancel">Annuler</string>
 
-    <string name="msg">%1$s\n%2$s</string>
     <string name="chat">Chat</string>
     <string name="username">Pseudonyme</string>
+    <string name="about_footer">&lt;/&gt; with &lt;3</string>
+    <string name="about_content">
+        L’application a été réalisée dans le cadre des études à l’école de Polytech Lyon par l’équipe suivante :
+    </string>
+    <string name="about_authors">
+        Nathan FRANCOIS\n
+        Franck LACASTAIGNERATTE\n
+        <a href="https://senerh.github.io">Hakan SENER</a>
+    </string>
 
 </resources>
