--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_item_favorites">Favoris</string>
     <string name="menu_item_chat">Chat</string>
     <string name="menu_item_history">Historique</string>
-    <string name="menu_item_prefs">Préférences</string>
+    <string name="menu_item_prefs">Réglages</string>
     <string name="menu_item_about">À propos</string>
     <string name="menu_item_accueil">Accueil</string>
 
