--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="updateFavoritesText">Modifier</string>
     <string name="updateFavoritesDescriptionText">Sélectionnez vos mangas favoris qui apparaitrons sur l\'accueil</string>
     <string name="emptyHistoryText">L\'historique ne contient aucun élément.</string>
+    <string name="continueLastScan">Reprendre la lecture du scan %1$s</string>
 
 </resources>
