now using new version of api, displaying progression of the pages download, able to delete the pages of a scan by long pressing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="continueLastScan">Reprendre la lecture du scan %1$s</string>
     <string name="emptyFavortiteText"><![CDATA[Sélectionnez vos favoris depuis le menu Réglages > Favoris]]></string>
 
+    // dialogs
+    <string name="dialog_delete_scan_title">Suppression d\'un scan</string>
+    <string name="dialog_delete_scan_message">Voulez-vous supprimer toutes les pages de ce scan ?</string>
+
 </resources>
